added user side annonucement and added one more routes
